<resources>
    <string name="app_name">AnimeNation</string>

    <string name="welcome_to_watch_flix">Welcome to Anime Nation</string>
    <string name="get_started">Get started</string>
    <string name="the_best_movie_streaming_app_of_the_century_to_make_your_days_great">The best media streaming app of the century to make your days great!</string>

    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_first_name">First name</string>
    <string name="title_last_name">Last name</string>
    <string name="title_phone_number">Phone number</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>

    <string name="title_anime">Anime</string>
    <string name="title_korean_series">Korean Series</string>
    <string name="title_movies">Movies</string>
    <string name="title_anime_result">Anime Result</string>
    <string name="title_korean_result">Korean Result</string>
    <string name="title_movie_result">Movie Result</string>
    <string name="title_explore_anime_result">Popular anime that you might like</string>
    <string name="title_explore_korean_result">Korean series that you might like</string>
    <string name="title_explore_movie_result">Top movies for 2024</string>
    <string name="title_cast">Casts</string>
    <string name="title_watch">Watch</string>
    <string name="title_see_all">See all</string>

    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_dont_have_an_account">Don\'t have an account?</string>
    <string name="title_already_have_an_account">Already have an account?</string>
    <string name="title_forgot_the_password">Forgot the password?</string>
    <string name="title_remember_me">Remember me</string>

    <string name="title_login_description">Let\'s in! Login your account and explore some movies</string>
    <string name="title_register_description">Create your account now and enjoy watching movies!</string>

    <string name="title_favorites_success">Successfully added to your list!</string>
    <string name="title_favorites_failed">Sorry, something wen\'t wrong, please try again later</string>

    <string name="dialog_permission_required_title">Notification access is required, Please enable it on the settings to receive notifications.</string>
    <string name="dialog_subtitle">Please confirm to proceed</string>

    <string name="action_okay">Okay</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>

    <string name="image_animation_tag">imageTransition</string>

    <string name="section_top_10_anime_this_week">Top 10 Anime This Week</string>
    <string name="section_latest_episodes">Latest Episodes Release</string>
    <string name="section_popular_anime">Popular Anime</string>
    <string name="section_anime_airing_schedule">Anime Airing Schedule</string>
    <string name="section_random_anime">Random anime\'s that you might like</string>
    <string name="genre">Genre :</string>
    <string name="text_subtitle">Subtitle</string>
    <string name="download">Download</string>
    <string name="explore_center_description">Explore available anime or movies\nand enjoy watching!</string>
    <string name="hint_search">Search</string>
    <string name="hint_search_contents">Search anime, korean and movies…</string>
    <string name="title_all_categories">All Categories</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_empty_description">It seems that you haven\'t added\n any anime to the list</string>
    <string name="title_episode">Episode: %1$d</string>
    <string name="title_episodes">Episodes</string>

</resources>