<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.presentation.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="254dp"
                android:layout_height="137dp"
                android:layout_gravity="center"
                android:src="@drawable/main_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@string/title_login_description"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:textColorHint="@color/unselected_tabs"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/red"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:startIconDrawable="@drawable/icon_email_24px"
                    app:startIconTint="@color/text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edittext"
                        android:fontFamily="@font/sf_pro_text_regular"
                        android:hint="@string/title_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/text_color" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/unselected_tabs"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxCornerRadiusTopEnd="15dp"
                    app:boxCornerRadiusTopStart="15dp"
                    app:boxStrokeColor="@color/red"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="1dp"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/text_color"
                    app:startIconDrawable="@drawable/icon_lock_24px"
                    app:startIconTint="@color/text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edittext"
                        android:fontFamily="@font/sf_pro_text_regular"
                        android:hint="@string/title_password"
                        android:inputType="textPassword"
                        android:textColor="@color/text_color" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/remember_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/second_btn_text"
                android:fontFamily="@font/sf_pro_text_regular"
                android:includeFontPadding="false"
                android:text="@string/title_remember_me"
                android:textColor="@color/text_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            </CheckBox>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/second_btn_text"
                android:fontFamily="@font/sf_pro_text_regular"
                android:padding="15dp"
                android:text="@string/title_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remember_user"
                app:rippleColor="@color/black_overlay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/grid_3"
                android:fontFamily="@font/sf_pro_text_regular"
                android:gravity="center"
                android:text="@string/title_forgot_the_password"
                android:textColor="@color/second_btn_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/remember_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/remember_user" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="?actionBarSize"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/grid_1_half"
                android:src="@drawable/icon_arrow_back_24px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_dont_have_an_account" />

                <TextView
                    android:id="@+id/sign_up_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="?selectableItemBackground"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:padding="@dimen/grid_1_half"
                    android:text="@string/title_sign_up"
                    android:textColor="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.047505938" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/loading_widget"
        layout="@layout/shared_loading_widget"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>